--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[env:nanoatmega328]
+[env:digispark-tiny]
 
 platform = atmelavr
-board = nanoatmega328
+board = digispark-tiny
 
 framework = arduino
 
@@ -20,4 +20,4 @@ lib_deps =
   # Using a library name
   Adafruit NeoPixel
 
-upload_port = /dev/cu.wchusbserial1410
+upload_port = /dev/cu.usbmodem1424101
